# rssclient

./: Cargo.toml  install.sh
src/: config.rs  main.rs  request.rs  ui.rs
