[package]
name = "rssclient"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.4.0"
reqwest = "0.13.3"
tokio = {version = "1.52.1", features = ["full"]}
serde = {version = "1.0.228", features = ["derive"]}
serde-xml-rs = "0.8.2"
serde_json = "1.0.149"
chrono = "0.4.44"
ratatui = "0.30.0"
ratatui-textarea = "0.9.1"
crossterm = "0.25"
dirs = "6.0.0"
open = "5.3.4"
[profile.release]
debug = true
